create tests for favorite package